<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginBottom="8dp"
              android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="2dp"
        app:contentPaddingBottom="4dp"
        app:contentPaddingLeft="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/gr_Desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gr_Desc"
                android:textColor="@android:color/black"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/time_Start"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/start_time"
                android:textColor="@android:color/black"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/time_End"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/end_time"
                android:textColor="@android:color/black"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/gr_Status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:textColor="@android:color/black"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/gr_commission"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delivery_commission"
                android:textColor="@android:color/black"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/gr_createdAt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/created_at"
                android:textColor="@android:color/black"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/gr_updatedAt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/updated_at"
                android:textColor="@android:color/black"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/gr_driver_reward"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/driver_reward"
                android:textColor="@android:color/black"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/gr_companyProceeds"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/company_proceeds"
                android:textColor="@android:color/black"
                android:textSize="18sp"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>